nautilus-files/pod-version-xgl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-xgl # replace with your ucsc username e.g. elochang-xgl
spec:
  hostname: xgl
  containers:
  - name: xgl
    image: ghcr.io/selkies-project/nvidia-glx-desktop:latest
    stdin: true
    tty: true
    ports:
    - name: http
      containerPort: 8080
      protocol: TCP
    resources:
      limits:
        memory: 32Gi
        cpu: "16"
        nvidia.com/gpu: 2
      requests:
        memory: 16Gi
        cpu: "4"
        nvidia.com/gpu: 1
    volumeMounts:
    - mountPath: /dev/shm
      name: dshm
    - mountPath: /cache
      name: xgl-cache-vol 
    - mountPath: /mnt/persistent
      name: xgl-root-vol 
  dnsPolicy: None
  dnsConfig:
    nameservers:
    - 8.8.8.8
    - 8.8.4.4
  volumes:
  - name: dshm
    emptyDir:
      medium: Memory
  - name: xgl-cache-vol
    persistentVolumeClaim:
      claimName: elochang-xgl-cache # replace with your cache PVC
  - name: xgl-root-vol
    persistentVolumeClaim:
      claimName: elochang-seaweed-volume # replace with your root PCV
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: nautilus.io/vis
            operator: NotIn
            values:
            - suncave
