nautilus-files/xgl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chang-xgl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xgl
  template:
    metadata:
      labels:
        app: xgl
    spec:
      hostname: xgl
      containers:
      - name: xgl
        image: ghcr.io/selkies-project/nvidia-glx-desktop:latest
        stdin: true
        tty: true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 64Gi
            cpu: "16"
            nvidia.com/gpu: 2
          requests:
            memory: 16Gi
            cpu: "4"
            nvidia.com/gpu: 2
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /cache
          name: xgl-cache-vol
        - mountPath: /mnt/persistent
          name: xgl-root-vol
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      - name: xgl-cache-vol
        # emptyDir: {}
        persistentVolumeClaim:
          claimName: elochang-xgl-cache
      - name: xgl-root-vol
        # emptyDir: {}
        persistentVolumeClaim:
          claimName: elochang-seaweed-volume
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nautilus.io/vis
                operator: NotIn
                values:
                - suncave
#              - key: topology.kubernetes.io/region
#                operator: In
#                values:
#                - us-west
