nautilus-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chang-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: elochang-vista.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: xgl-svc
            port:
              name: http-svc
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - elochang-vista.nrp-nautilus.io
---
apiVersion: v1
kind: Service
metadata:
  name: xgl-svc
  labels:
    app: chang-xgl-pod
spec:
  selector:
    app: chang-xgl-pod
  ports:
  - name: http-svc
    protocol: TCP
    port: 8080
